--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,6 +1,6 @@
-fastcgi_cache_path /var/cache/nginx levels=1:2 keys_zone=WORDPRESS:100m max_size=1g inactive=60m use_temp_path=off;
+fastcgi_cache_path /var/lib/nginx/cache levels=1:2 keys_zone=WORDPRESS:100m max_size=1g inactive=60m use_temp_path=off;
 fastcgi_cache_key "$scheme$request_method$host$request_uri";
-fastcgi_cache_use_stale error timeout invalid_header http_500;
+fastcgi_cache_use_stale error timeout invalid_header http_500 http_502 http_503 http_504;
 fastcgi_ignore_headers Cache-Control Expires Set-Cookie;
 
 upstream php {
